ScaPy/src/scapyParser.java
// Generated from scapy.g4 by ANTLR 4.4.1-dev
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class scapyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4.1-dev", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, BOOL=3, STRING=4, CHAR=5, MUL=6, DIV=7, ADD=8, SUB=9, 
		MOD=10, EXP=11, EQ=12, NE=13, LE=14, GE=15, GT=16, LT=17, ADD_ASS=18, 
		SUB_ASS=19, MUL_ASS=20, DIV_ASS=21, MOD_ASS=22, TYPE_INT=23, TYPE_CHAR=24, 
		TYPE_STRING=25, TYPE_BOOLEAN=26, TYPE_FLOAT=27, TYPE_ARRAY=28, ASSIGN=29, 
		IF=30, ELSE=31, WHILE=32, AND=33, OR=34, NOT=35, VAR=36, VAL=37, DEF=38, 
		RET=39, IMPORT=40, FOR=41, ARROW=42, UNTIL=43, OPENBLOCK=44, CLOSEBLOCK=45, 
		OPENPARENT=46, CLOSEPARENT=47, OPENBRACKET=48, CLOSEBRACKET=49, COMMA=50, 
		COLON=51, NEWLINE=52, ID=53, COMMENT=54, WHITESPACE=55;
	public static final String[] tokenNames = {
		"<INVALID>", "INT", "FLOAT", "BOOL", "STRING", "CHAR", "'*'", "'/'", "'+'", 
		"'-'", "'%'", "'^'", "'=='", "'!='", "'<='", "'>='", "'>'", "'<'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'Int'", "'Char'", "'String'", "'Boolean'", 
		"'Float'", "'Array'", "'='", "'if'", "'else'", "'while'", "'and'", "'or'", 
		"'not'", "'var'", "'val'", "'def'", "'return'", "'import'", "'for'", "'<-'", 
		"'until'", "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "':'", "'\n'", 
		"ID", "COMMENT", "WHITESPACE"
	};
	public static final int
		RULE_init = 0, RULE_import_function = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_assignment = 4, RULE_array_list = 5, RULE_declare_const = 6, RULE_declare_variable = 7, 
		RULE_base_statement = 8, RULE_func_statements = 9, RULE_proc_statements = 10, 
		RULE_func_statement = 11, RULE_arglist = 12, RULE_func_def = 13, RULE_proc_def = 14, 
		RULE_paramlist = 15, RULE_func_call = 16, RULE_id = 17, RULE_type = 18, 
		RULE_var = 19, RULE_expression = 20;
	public static final String[] ruleNames = {
		"init", "import_function", "statements", "statement", "assignment", "array_list", 
		"declare_const", "declare_variable", "base_statement", "func_statements", 
		"proc_statements", "func_statement", "arglist", "func_def", "proc_def", 
		"paramlist", "func_call", "id", "type", "var", "expression"
	};

	@Override
	public String getGrammarFileName() { return "scapy.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public scapyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public Import_functionContext import_function(int i) {
			return getRuleContext(Import_functionContext.class,i);
		}
		public List<Import_functionContext> import_function() {
			return getRuleContexts(Import_functionContext.class);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(scapyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(scapyParser.NEWLINE, i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(42); import_function();
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(43); match(NEWLINE);
						}
						} 
					}
					setState(48);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54); statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_functionContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(scapyParser.COLON, 0); }
		public TerminalNode IMPORT() { return getToken(scapyParser.IMPORT, 0); }
		public TerminalNode CLOSEPARENT() { return getToken(scapyParser.CLOSEPARENT, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public TerminalNode OPENPARENT() { return getToken(scapyParser.OPENPARENT, 0); }
		public Import_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterImport_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitImport_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitImport_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_functionContext import_function() throws RecognitionException {
		Import_functionContext _localctx = new Import_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); match(IMPORT);
			setState(57); id();
			setState(58); match(OPENPARENT);
			setState(59); arglist();
			setState(60); match(CLOSEPARENT);
			setState(61); match(COLON);
			setState(62); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(scapyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(scapyParser.NEWLINE, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); statement();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(65); match(NEWLINE);
				setState(66); statement();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncDefContext extends StatementContext {
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public FuncDefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProcDefContext extends StatementContext {
		public Proc_defContext proc_def() {
			return getRuleContext(Proc_defContext.class,0);
		}
		public ProcDefContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterProcDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitProcDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitProcDef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BaseContext extends StatementContext {
		public Base_statementContext base_statement() {
			return getRuleContext(Base_statementContext.class,0);
		}
		public BaseContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterBase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitBase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitBase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new BaseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72); base_statement();
				}
				break;
			case 2:
				_localctx = new FuncDefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73); func_def();
				}
				break;
			case 3:
				_localctx = new ProcDefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74); proc_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Super_assignmentContext extends AssignmentContext {
		public Token op;
		public TerminalNode SUB_ASS() { return getToken(scapyParser.SUB_ASS, 0); }
		public TerminalNode MUL_ASS() { return getToken(scapyParser.MUL_ASS, 0); }
		public TerminalNode DIV_ASS() { return getToken(scapyParser.DIV_ASS, 0); }
		public Array_listContext array_list() {
			return getRuleContext(Array_listContext.class,0);
		}
		public TerminalNode MOD_ASS() { return getToken(scapyParser.MOD_ASS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode ADD_ASS() { return getToken(scapyParser.ADD_ASS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Super_assignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterSuper_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitSuper_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitSuper_assignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Create_array_assignmentContext extends AssignmentContext {
		public TerminalNode ASSIGN() { return getToken(scapyParser.ASSIGN, 0); }
		public TerminalNode TYPE_ARRAY() { return getToken(scapyParser.TYPE_ARRAY, 0); }
		public TerminalNode OPENBRACKET() { return getToken(scapyParser.OPENBRACKET, 0); }
		public Array_listContext array_list() {
			return getRuleContext(Array_listContext.class,0);
		}
		public TerminalNode CLOSEPARENT() { return getToken(scapyParser.CLOSEPARENT, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(scapyParser.CLOSEBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode OPENPARENT() { return getToken(scapyParser.OPENPARENT, 0); }
		public Create_array_assignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterCreate_array_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitCreate_array_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitCreate_array_assignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Simple_assignmentContext extends AssignmentContext {
		public TerminalNode ASSIGN() { return getToken(scapyParser.ASSIGN, 0); }
		public Array_listContext array_list() {
			return getRuleContext(Array_listContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Simple_assignmentContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterSimple_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitSimple_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitSimple_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new Simple_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77); id();
				setState(79);
				_la = _input.LA(1);
				if (_la==OPENBRACKET) {
					{
					setState(78); array_list();
					}
				}

				setState(81); match(ASSIGN);
				setState(82); expression(0);
				}
				break;
			case 2:
				_localctx = new Create_array_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84); id();
				setState(86);
				_la = _input.LA(1);
				if (_la==OPENBRACKET) {
					{
					setState(85); array_list();
					}
				}

				setState(88); match(ASSIGN);
				setState(89); match(TYPE_ARRAY);
				setState(90); match(OPENBRACKET);
				setState(91); type();
				setState(92); match(CLOSEBRACKET);
				setState(93); match(OPENPARENT);
				setState(94); expression(0);
				setState(95); match(CLOSEPARENT);
				}
				break;
			case 3:
				_localctx = new Super_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97); id();
				setState(99);
				_la = _input.LA(1);
				if (_la==OPENBRACKET) {
					{
					setState(98); array_list();
					}
				}

				setState(101);
				((Super_assignmentContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD_ASS) | (1L << SUB_ASS) | (1L << MUL_ASS) | (1L << DIV_ASS) | (1L << MOD_ASS))) != 0)) ) {
					((Super_assignmentContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(102); expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_listContext extends ParserRuleContext {
		public Array_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_list; }
	 
		public Array_listContext() { }
		public void copyFrom(Array_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArraylistContext extends Array_listContext {
		public TerminalNode CLOSEBRACKET(int i) {
			return getToken(scapyParser.CLOSEBRACKET, i);
		}
		public List<TerminalNode> OPENBRACKET() { return getTokens(scapyParser.OPENBRACKET); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public List<TerminalNode> CLOSEBRACKET() { return getTokens(scapyParser.CLOSEBRACKET); }
		public TerminalNode OPENBRACKET(int i) {
			return getToken(scapyParser.OPENBRACKET, i);
		}
		public ArraylistContext(Array_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterArraylist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitArraylist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitArraylist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_listContext array_list() throws RecognitionException {
		Array_listContext _localctx = new Array_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_array_list);
		try {
			int _alt;
			_localctx = new ArraylistContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(106); match(OPENBRACKET);
					setState(107); expression(0);
					setState(108); match(CLOSEBRACKET);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_constContext extends ParserRuleContext {
		public Declare_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_const; }
	 
		public Declare_constContext() { }
		public void copyFrom(Declare_constContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Declare_simple_constContext extends Declare_constContext {
		public TerminalNode ASSIGN() { return getToken(scapyParser.ASSIGN, 0); }
		public TerminalNode VAL() { return getToken(scapyParser.VAL, 0); }
		public TerminalNode COLON() { return getToken(scapyParser.COLON, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Declare_simple_constContext(Declare_constContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).enterDeclare_simple_const(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scapyListener ) ((scapyListener)listener).exitDeclare_simple_const(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof scapyVisitor ) return ((scapyVisitor<? extends T>)visitor).visitDeclare_simple_const(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_constContext declare_const() throws RecognitionException {
		Declare_constContext _localctx = new Declare_constContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declare_const);
		int _la;
		try {
			_localctx = new Declare_simple_constContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(VAL);
			setState(115); id();
			setState(118);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(116); match(COLON);
				setState(117); type();
				}
			}

			setState(120); match(ASSIGN);
			setState(121); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
